init main js & main css

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,9 +9,19 @@ and open the template in the editor.
     <title>Rectangles</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="rectangle">
+      <div id="divRight">Right</div>
+      <div id="divBottom">Bottom</div>
+    </div>
+    
+    <div id="tools">
+      <button id="right">Right</button>
+      <button id="bottom">Bottom</button>
+    </div>
   </body>
 </html>
