remove the text of right, bottom div

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,8 +15,8 @@ and open the template in the editor.
   </head>
   <body>
     <div id="root" class="rectangle">
-      <div id="divRight">Right</div>
-      <div id="divBottom">Bottom</div>
+      <div id="divRight"></div>
+      <div id="divBottom"></div>
     </div>
     
     <div id="tools">
